# C-work2

./: CMakeLists.txt  fibonacci.cpp  fibonacci.h  main.cpp
folder/: CMakeLists.txt  CMakeProject1.cpp  Source1.cpp  heading.h
lab4/: CMakeLists.txt  Lan_4.cpp  Lan_4.h
lab5/: CMakeLists.txt  Vector3D.cpp  Vector3D.h  main.cpp
lab6/: CMakeLists.txt  Lab_6.cpp  Lab_6.h  input.txt
lab7/: CMakeLists.txt  Lab_7.cpp  Lab_7.h  Source1.cpp  coins.txt
