# CMakeList.txt: проект CMake для CMakeProject5; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (CMakeProject5 main.cpp fibonacci.cpp fibonacci.h )

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
