# CMakeList.txt: проект CMake для Lab_7; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (Lab_7 Lab_7.cpp Lab_7.h Source1.cpp)

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
